--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intersections",
+  "name": "intellisection",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -9,10 +9,23 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix"
+    "lintPages": "eslint src/",
+    "lint:fix": "eslint src/ --fix --color",
+    "lint:style:fix": "stylelint 'src/**/*.{vue,css,scss,sass}' --fix",
+    "type-check": "vue-tsc --build"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "npm run lint:fix"
+    ],
+    "*.{vue,css,scss,sass}": [
+      "npm run lint:style:fix"
+    ]
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "es6-url-template": "^3.0.2",
+    "iss-ui-kit": "^0.0.15",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -22,17 +35,33 @@
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vitest/eslint-plugin": "1.1.31",
+    "@vitest/eslint-plugin": "^1.1.31",
     "@vue/eslint-config-typescript": "^14.4.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.20.1",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-vue": "^9.32.0",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
+    "lint-staged": "^15.4.3",
     "npm-run-all2": "^7.0.2",
+    "sass": "^1.85.0",
+    "sass-loader": "^16.0.5",
+    "stylelint": "^16.14.1",
+    "stylelint-config-recess-order": "^6.0.0",
+    "stylelint-config-recommended-scss": "^14.1.0",
+    "stylelint-config-recommended-vue": "^1.6.0",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-order": "^6.0.4",
+    "stylelint-scss": "^6.11.1",
     "typescript": "~5.7.3",
+    "typescript-eslint": "^8.24.1",
     "vite": "^6.1.0",
+    "vite-plugin-stylelint": "^6.0.0",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.5",
     "vue-tsc": "^2.2.2"
