#IPLUS-38152 configurate the tsconfig files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,40 @@
 {
-  "files": [],
+  "compilerOptions": {
+    "useUnknownInCatchVariables": false,
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "types": [ "node", "vite/client" ],
+    "paths": {
+      "@/*": ["src/*"],
+			"pages/*": ["src/pages/*"],
+			"assets": ["src/assets"],
+			"composables": ["src/composables"],
+			"utils": ["src/utils"],
+			"interfaces": ["src/interfaces"],
+      "components": ["src/components"],
+      "its-kit": ["src/its-kit"]
+    },
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "preserve",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+  },
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [
     {
       "path": "./tsconfig.node.json"
