--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "es6-url-template": "^3.0.2",
     "iss-ui-kit": "^0.0.15",
     "pinia": "^3.0.1",
+    "vite": "^6.1.0",
     "vue": "^3.5.13",
+    "vue-i18n": "^11.1.1",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
@@ -49,7 +51,7 @@
     "jsdom": "^26.0.0",
     "lint-staged": "^15.4.3",
     "npm-run-all2": "^7.0.2",
-    "sass": "^1.85.0",
+    "sass": "^1.85.1",
     "sass-loader": "^16.0.5",
     "stylelint": "^16.14.1",
     "stylelint-config-recess-order": "^6.0.0",
@@ -60,7 +62,6 @@
     "stylelint-scss": "^6.11.1",
     "typescript": "~5.7.3",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.1.0",
     "vite-plugin-stylelint": "^6.0.0",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.5",
