--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "es6-url-template": "^3.0.2",
-    "iss-ui-kit": "^0.0.15",
+    "iss-ui-kit": "0.0.16-beta.5",
     "pinia": "^3.0.1",
     "vite": "^6.1.0",
     "vue": "^3.5.13",
