--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
     ]
   },
   "dependencies": {
+    "@popperjs/core": "2.11.8",
     "@vueuse/core": "12.7.0",
     "axios": "1.7.9",
+    "date-fns": "^2.30.0",
     "es6-url-template": "3.0.2",
-    "iss-ui-kit": "^0.0.16-beta.11",
+    "iss-ui-kit": "^0.0.16",
     "pinia": "3.0.1",
+    "v-calendar": "3.1.2",
     "vite": "6.1.0",
     "vue": "3.5.13",
     "vue-i18n": "11.1.1",
-    "vue-router": "4.5.0"
+    "vue-router": "4.5.0",
+    "vue-virtual-scroller": "2.0.0-beta.8"
   },
   "devDependencies": {
     "@tsconfig/node22": "22.0.0",
